<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trackingbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trackingbtntxt" />

        <Button
            android:id="@+id/enteringbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enteringbtntxt" />

        <Button
            android:id="@+id/settingbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingbtntxt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/myFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>

