<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.me.myapplication.Entering">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmbtn"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp"
        android:text="@string/enteryourowndatatxt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/confirmbtn"
        android:layout_marginTop="50dp"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/foodnametxt"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/saveNewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textMultiLine" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/yourownsodiumamttxt"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/saveNewAmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/findbtntxt"
                android:id="@+id/findbtn"
                android:layout_gravity="left|bottom"
                android:layout_below="@+id/tableLayout"
                android:layout_toLeftOf="@+id/textView5"
                android:layout_toStartOf="@+id/textView5"
                android:layout_weight="1" />

            <Button
                android:id="@+id/savebtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/savebtntxt"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_below="@+id/tableLayout"
                android:layout_centerHorizontal="true"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/deletebtntxt"
                android:id="@+id/deletebtn"
                android:layout_gravity="right|bottom"
                android:layout_alignTop="@+id/savebtn"
                android:layout_toRightOf="@+id/textView5"
                android:layout_toEndOf="@+id/textView5"
                android:layout_weight="1" />
        </TableRow>

    </TableLayout>


    </RelativeLayout>
